--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
   path_provider: ^1.6.5
+  shared_preferences: ^0.5.6+3
 
 dev_dependencies:
   hive_generator: ^0.7.0+2
