--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   hive_flutter: ^0.3.0+2
   path_provider: ^1.6.5
   shared_preferences: ^0.5.6+3
+  provider: ^4.0.5
 
 dev_dependencies:
   hive_generator: ^0.7.0+2
