--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A Flutter app that will help your productivity.
 version: 1.0.0+2
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.5.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -15,6 +15,8 @@ dependencies:
   path_provider: ^1.6.5
   shared_preferences: ^0.5.6+3
   provider: ^4.0.5
+  flutter_slidable: ^0.5.4
+
 
 dev_dependencies:
   hive_generator: ^0.7.0+2
