--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   shared_preferences: ^0.5.6+3
   provider: ^4.0.5
   flutter_slidable: ^0.5.4
-
+  countdown_flutter: ^0.1.1
 
 dev_dependencies:
   hive_generator: ^0.7.0+2
